# playlist-manager

./: .env.template  .gitignore  README.md  TODOS.md  compose.yaml  install.sh  package-lock.json  prometheus.yml  pyproject.toml  run-dev.sh  widget-design-mockups.html
backend/: .env.j2  .env.template  .env.test  Dockerfile  LICENSE  README.md  gunicorn.conf.py  pyproject.toml
backend/src/: album.py  app.py  flask_config.py  musicbrainz.py  spotify.py  text_formatting.py
backend/src/controllers/: auth.py  database.py  music_data.py  spotify.py
backend/src/data/: session_playlists.py
backend/src/database/: models.py
backend/src/database/crud/: album.py  artist.py  genre.py  playback_state.py  playlist.py  track.py  user.py
backend/src/database/migrations/: 240909-add-tracks-table.py  init.py  m_240909_add_tracks_table.py  m_241030_add_access_tokens_table.py  m_250124_add_album_notes_table.py  m_250124_add_playback_state_table.py  m_init.py  setup.py
backend/src/dataclasses/: album.py  album_tracks.py  api_playback_info.py  artist.py  device.py  episode.py  explicit_content_info.py  external_ids.py  external_urls.py  followers.py  image.py  linked_from.py  playback_info.py  playback_request.py  playback_state.py  playlist.py  playlist_info.py  playlist_track_object.py  playlist_tracks.py  restrictions.py  show.py  simplified_track.py  track.py  user.py
backend/src/dataclasses/musicbrainz/: release_group_response.py
backend/src/dataclasses/spotify_auth/: token_response.py
backend/src/static/styles/: styles.css
backend/src/templates/: edit_playlist.html  index.html
backend/src/templates/icons/: sort_up.html
backend/src/tests/: spotify_test.py
backend/src/tests/integration_tests/: app_test.py
backend/src/tests/mock_builders/: album_builder.py  album_tracks_builder.py  artist_builder.py  current_user_playlists_builder.py  image_builder.py  playback_info_builder.py  playlist_info_tracks_builder.py  (+3 more)
backend/src/utils/: response_creator.py
(+450 files in other folders)
