[tool.poetry]
name = "playlist-manager"
version = "0.1.0"
description = ""
authors = ["CalPin <calum.pinder@softwire.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
    ]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.1"
pydantic = "^2.6.4"
requests = "^2.32.3"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
