[tool.poetry]
name = "playlist-manager"
version = "0.1.0"
description = ""
authors = ["CalPin <calum.pinder@softwire.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
    ]

[tool.poetry.dependencies]
Authlib = "^1.3.2"
python = "^3.10"
flask = "^3.1.0"
python-dotenv = "^1.0.0"
flask-cors = "^5.0.0"
pydantic = "^2.6.4"
requests = "^2.32.3"
gunicorn = "^22.0.0"
peewee = "^3.17.6"
asyncio = "^3.4.3"
psycopg2 = "^2.9.9"
tenacity = "^9.0.0"
loggly-python-handler = "^1.0.1"
python-json-logger = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
